app/assets/stylesheets/photo_manager.css.scss
$manager-side-bar-width: 320px;

#dashboard-actions {
  text-align: left;
  padding: 0 $side-width 20px;

  .dropdown-menu {
    // visibility: hidden;
    display: inline-block;
    padding: 7px;
    margin-bottom: 5px;
    border: 1px solid #aaa;
    @include border-radius(2px);
    font-size: 14px;
    height: 19px;
    overflow-y: hidden;
    overflow-x: hidden;
    position: relative;
    vertical-align: top;
    cursor: pointer;
    z-index: 1;

    &.album-choices { z-index: 10; }
    &.batch-actions { z-index: 9; }
    &.publish-actions { z-index: 8; }

    &:hover, &.opened {
      overflow: visible;
    }

    .placeholder {
      display: inline-block;
      padding-right: 30px;
    }

    i {
      float: right;
      line-height: 19px;

      &.fa-caret-down { color: #555; }
    }

    .options {
      margin: 7px -8px;
      text-overflow: ellipsis;
      overflow: hidden;
      white-space: nowrap;
      max-width: 200px;
      border: 1px solid #aaa;
      background-color: white;
      @include border-radius(0 0 2px 2px);

      .option {
        padding: 7px;

        &:hover { background-color: $accent-color; color: white; }
      }
    }
  }
}

#photo-manager-feed {
  text-align: left;
  padding: 0 $side-width 40px;
  margin: -10px;
  min-height: 100%;

  .upload-button {
    height: 130px;
    width: 130px;
    margin: 10px;
    position: relative;
    display: inline-block;
    vertical-align: top;
    background-color: #ccc;
    @include icon-background('upload.png');
    background-size: 30px;
    background-position: 50% 40%;
    cursor: pointer;
    color: white;
    text-align: center;
    line-height: 175px;
    font-size: 16px;

    &:hover { background-color: #aaa; }
  }

  #uploader { display: none; }

  .photo {
    height: 130px;
    width: 130px;
    margin: 10px;
    background-size: cover;
    display: inline-block;
    overflow: hidden;
    position: relative;
    @include transition(opacity 0.3s ease-in-out);

    i { display: none; }

    &.hidden {
      @include opacity(0);
      text-align: center;
      line-height: 130px;
      font-size: 50px;
      @include transition(opacity 0s);

      &.processing, &.uploading {
        @include opacity(1);

        i { display: inherit; }
      }
      &.uploading i { color: $accent-color; }
      &.processing i { color: black; }
    }

    &:hover {
      margin: 7px;
      border: 3px solid gray;
      cursor: pointer;
    }

    &.selected {
      margin: 7px;
      border: 3px solid $accent-color;
    }
  }
}

@-webkit-keyframes progress-bar-stripes {
  from  { background-position: 40px 0; }
  to    { background-position: 0 0; }
}

@keyframes progress-bar-stripes {
  from  { background-position: 40px 0; }
  to    { background-position: 0 0; }
}

#uploader .progress {
  margin-top: 10px;
  height: 5px;
  width: $manager-side-bar-width;
  background-color: gray;
  overflow: hidden;

  background-color: #f7f7f7;
  background-image: -moz-linear-gradient(top, #f5f5f5, #f9f9f9);
  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#f5f5f5), to(#f9f9f9));
  background-image: -webkit-linear-gradient(top, #f5f5f5, #f9f9f9);
  background-image: -o-linear-gradient(top, #f5f5f5, #f9f9f9);
  background-image: linear-gradient(to bottom, #f5f5f5, #f9f9f9);
  background-repeat: repeat-x;
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fff5f5f5', endColorstr='#fff9f9f9', GradientType=0);
  -webkit-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
  -moz-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
}

.progress .bar.animated {
  -webkit-animation: progress-bar-stripes 2s linear infinite;
  -moz-animation: progress-bar-stripes 2s linear infinite;
  -ms-animation: progress-bar-stripes 2s linear infinite;
  -o-animation: progress-bar-stripes 2s linear infinite;
  animation: progress-bar-stripes 2s linear infinite;
  animation: 2s linear 0s normal none infinite progress-bar-stripes;
}

#uploader .progress .bar {
  height: 20px;
  width: 0px;
  background-color: blue;
  -webkit-transition: width 500ms ease;
  -moz-transition: width 500ms ease;
  -o-transition: width 500ms ease;
  transition: width 500ms ease;
  background-color: #149bdf;
  background-image: -webkit-gradient(linear, 0 100%, 100% 0, color-stop(0.25, rgba(255, 255, 255, 0.15)), color-stop(0.25, transparent), color-stop(0.5, transparent), color-stop(0.5, rgba(255, 255, 255, 0.15)), color-stop(0.75, rgba(255, 255, 255, 0.15)), color-stop(0.75, transparent), to(transparent));
  background-image: -webkit-linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
  background-image: -moz-linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
  background-image: -o-linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
  background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
  @include background-size(40px 40px);
}

